# VRRT

./: .gitignore  README.md
calibrations/: calib_640x360.npz
doc/: system.md
notes/: blackbox.md  kickoff.md  meet_11.06.md  meet_13.06.md  meet_16.05.md  meet_22.05.md  stereo.md
research/: memory.md  not_filtered.md  notes.md  reid.md  res.md  research_results.md  shopping.md  stereo.md
source/bib_detection/: README.md  annotate.py  annotate_video.py  inference.py  inspect_dataset.py  main.py  pyproject.toml  train.py  visualize.py
source/depth/: main.py  pyproject.toml
source/pipeline/: main.py
source/project/: README.md  aha.py  bulk_rename.py  compare.py  create_labels.py  create_parameters.py  depth.py  depth_precision_benchmark.py  detectors.py  evaluate_ocr.py  generate_depth_metrics.py  main.py  ocr_benchmark.py  output_analyzer.py  parameters.json  parameters_first_hour.json  parse_race_results.py  pipeline.py  pyproject.bak.toml  pyproject.toml  results.json  results_completed.json  results_full.json  results_old.json  slurm.sh  sync.sh  test.py  test_video.py  todo.md  trackers
source/project/classes/: bib_detector.py  bib_reader.py  depth.py  detectors.py  person_detector.py  pipeline.py  tools.py
source/project/classes/depth_anything_v2/: dpt.py
source/project/depth_anything_v2/: dpt.py
source/project/parameters/: parameters_second_hour.json
source/record/: README.md  aha.py  calibrations  create_dataset.py  filelist.txt  fps_benchmark.py  main.py  parseargs.py  pyproject.toml  record.py  record_stereo.py  record_stereo_2.py  record_timestamp.py  records  show_live_feed.py  sync.py  sync_and_merge.py  test.html  test.py  test_linuxpy.py
source/stereo/: README.md  calibrate.py  calibration.py  camera.py  check_alignement.py  convert_to_yaml.py  depth_anything.py  depth_map.py  epipolar.py  new_calibration.py  pyproject.toml  rectify.py  take_picture.py
source/stereo/apptainer/: image.def
source/stereo/calibrations/: calib_0.npz
source/stereo/docker/: Dockerfile  compose.yaml
source/stereo/patterns/: generate.py
source/yolo/: live_tracking.py  pyproject.toml  video_mixed_tracking.py  video_tracking.py
source/yolo/classes/: capture.py  track.py
source/yolo/trackers/: botsort.yaml
tools/: disable_connection_share.sh  share_connection.sh
trackers/: botsort.yaml
