[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "linuxpy>=0.21.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
