[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boxmot>=12.0.8",
    "pytubefix>=8.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.141",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
